--- a/index.html
+++ b/index.html
@@ -35,14 +35,22 @@
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
-                <div class="col-12 col-sm-6">
+                <div class=" row col-12 col-sm-4 align-self-center">
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
-                    <img src="img/logo.png" class="img-fluid">
-                </div>
-                </div>
+                <div class=" row col-12 col-sm-4 align-self-center">
+                  <img src="img\logo.png" class="img-fluid">
+                  </div>
+                    <div class="row col-12 col-sm-4 align-self-center">
+                    <span clas="navbar-text">
+                    <a role="button" class="btn btn-block nav-link btn-warning" data-toggle="modal"
+                    data-placement="bottom" href="#reserveform">
+                      Reserve Table
+                    </a>
+                    </span>
+
+                  </div>
             </div>
         </div>
     </header>
@@ -57,7 +65,7 @@
                     <img class="d-flex mr-3 img-thumbnail align-self-center"
                             src="img/uthappizza.png" alt="Uthappizza">
                     <div class="media-body">
-                        <h2 class="mt-0">Uthappizza</h2>
+                        <h2 class="mt-0">Uthappizza<span class="badge badge-danger">HOT</span><span class="badge badge-pill badge-secondary">$4.99</span></h2>
                         <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and
                             Italian pizza, topped with Cerignola olives, ripe vine
                             cherry tomatoes, Vidalia onion, Guntur chillies and
@@ -72,11 +80,19 @@
             <div class="col-12 col-sm-4 col-md-3">
                 <h3>This Month's Promotions</h3>
             </div>
-            <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
-            </div>
+            <div class="col col-sm order-sm-last col-md">
+                <div class="media">
+                    <img class="d-flex mr-3 img-thumbnail align-self-center order-sm-last"
+                            src="img/buffet.png" alt="buffet"> 
+                    <div class="media-body">                           
+                        <h2 class="mt-0">Weekend Grand Buffet<span class="badge badge-danger">NEW</span></h2>
+                        <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five 
+                            different salads, six enticing appetizers, six main entrees and five choicest desserts.
+                            Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                        </div>
+                </div>
         </div>
+    </div>
 
         <div class="row row-content align-items-center">
             <div class="col-12 col-sm-4 order-sm-last col-md-3">
@@ -98,7 +114,57 @@
                 </div>
             </div>
         </div>
-    </div>
+        <div class="modal-body">
+            <form>
+        <div class="form-group row">
+            <div class="col-sm-6">
+                <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+                <div class="form-group row">
+                    <label for="Number of guests" class="col-md-3 col-form-label">Number of guests</label>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                        <label class="form-check-label" for="inlineRadio1">1</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                        <label class="form-check-label" for="inlineRadio2">2</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3" >
+                        <label class="form-check-label" for="inlineRadio3">3</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                        <label class="form-check-label" for="inlineRadio1">4</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                        <label class="form-check-label" for="inlineRadio2">5</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+                        <label class="form-check-label" for="inlineRadio3">6</label>
+                    </div>
+                        <div class="form-group row">
+                            <label for="date" class="col-md-4 col-form-label">Date and time</label>
+                            <div class="col-md-4">
+                                <input type="text" class="form-control" id="date" name="firstname" placeholder="Date">
+                            </div>
+                            <div class="col-md-4">
+                                <input type="text" class="form-control" id="time" name="lastname" placeholder="Time">
+                            </div>
+                            <div class="form-group row">
+                                <div class="col-md-4">
+                                    <button type="submit" class="btn btn-primary">
+                                        Reserve
+                                    </button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     <footer class="footer">
         <div class="container">
